Fix hidden labels: change overflow from hidden to visible

--- a/py_captions_for_channels/webui/static/style.css
+++ b/py_captions_for_channels/webui/static/style.css
@@ -1137,13 +1137,14 @@ body {
   flex: 1;
   min-width: 0;
   padding-bottom: 5px;
-  overflow: hidden;
+  overflow: visible;
 }
 
 .chart {
   width: 100%;
   height: 130px;
   max-width: 100%;
+  overflow: visible;
 }
 
 .chart canvas {
